--- a/package.json
+++ b/package.json
@@ -30,8 +30,9 @@
         "clsx": "^2.0.0",
         "drizzle-orm": "^0.28.5",
         "framer-motion": "^10.16.4",
+        "nanoid": "^5.0.2",
         "next": "^13.5.4",
-        "next-auth": "^4.23.0",
+        "next-auth": "0.0.0-manual.cfb42ae7",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-dropzone": "^14.2.3",
